# json-build

./: .gitignore  LICENSE  README.md  launch.txt  new_config.json  old.py  requirements.txt  setup.cfg  setup.py
json_build/: build.py
json_build.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
package/json_build/: __init__.py
src/json_build/: __init__.py  main.py
src/json_build.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
