[metadata]
name = json-build
version = 0.0.3
author = Vince
author_email = vincent.berry11@gmail.com
description = A package to help build and save JSON files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vaberry/json-build
project_urls =
    Bug Tracker = https://github.com/vaberry/json-build
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src